--- a/src/components/topbar/TopBar.css
+++ b/src/components/topbar/TopBar.css
@@ -1,7 +1,7 @@
 .topbar {
   background-color: #fff;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1);
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 100%;
   padding: 10px 0;
