--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: roboto;
+}
+
+body {
+  font-family: roboto;
 }
 
 .container {
