--- a/src/components/widgetSm/WidgetSm.css
+++ b/src/components/widgetSm/WidgetSm.css
@@ -21,7 +21,7 @@
 
 .widgetSm__list-item {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   padding: 7px 0;
 }
@@ -40,7 +40,7 @@
 .widgetSm__user {
   display: flex;
   flex-direction: column;
-  text-align: center;
+  margin-left: 20px;
 }
 
 .widgetSm__user-name {
@@ -52,6 +52,7 @@
   font-weight: 300;
   text-transform: lowercase;
   color: #919191;
+  margin-top: 4px;
 }
 
 .widgetSm__btn {
@@ -65,6 +66,7 @@
   background-color: #eeeef7;
   color: #555;
   cursor: pointer;
+  margin-left: auto;
 }
 
 .widgetSm__icon {
