--- a/src/pages/product/Product.css
+++ b/src/pages/product/Product.css
@@ -90,3 +90,72 @@
   font-weight: 300;
   text-transform: capitalize;
 }
+
+.product__bottom {
+  padding: 20px;
+  margin: 20px;
+  box-shadow: 0 0 15px -10px rgba(0, 0, 0, 0.75);
+}
+
+.product__form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.product__form-left {
+  display: flex;
+  flex-direction: column;
+}
+
+.product__form-left > label {
+  margin-bottom: 10px;
+  color: gray;
+}
+
+.product__form-left > input {
+  margin-bottom: 10px;
+  border: none;
+  padding: 5px;
+  border-bottom: 1px solid gray;
+}
+
+.product__form-left > input:focus {
+  outline: none;
+}
+
+.product__form-left > select {
+  margin-bottom: 10px;
+}
+
+/*  */
+
+.product__form-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-self: stretch;
+}
+
+.product__uploader {
+  display: flex;
+  align-items: center;
+}
+
+.product__uploader-img {
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  margin-right: 20px;
+}
+
+.product__btn {
+  border: none;
+  outline: none;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: darkblue;
+  color: #fff;
+  font-weight: 600;
+  cursor: pointer;
+}
